--- a/aux.properties
+++ b/aux.properties
@@ -1,6 +1,7 @@
-[log]
-directory="auxlogs"
-level=DEBUG
-verbose=True
-[store]
-temporary_directory="/tmp/aux"
+{"logging": {"directoryName": "auxlogs",
+             "level": "DEBUG",
+             "verbose": "True",
+             "resultServer": "<IP>" },
+ "store": {"temporaryDirectory": "/tmp/aux"}
+ "engine": {"actor": "reactor"}
+}
