configurations and logcontroller

--- a/aux.properties
+++ b/aux.properties
@@ -1,4 +1,4 @@
-{"logging": {"directoryName": "auxlogs",
+{"logging": {"logdir": ".aux/",
              "level": "DEBUG",
              "verbose": "True",
              "resultServer": "<IP>" },
