--- a/aux.properties
+++ b/aux.properties
@@ -1,7 +1,7 @@
 {"logging": {"logdir": ".aux/",
              "level": "DEBUG",
              "verbose": "True",
-             "resultServer": "<IP>" },
- "store": {"temporaryDirectory": "/tmp/aux"}
+             "resultServer": "http://192.168.0.125:8080/api/test/result" },
+ "store": {"temporaryDirectory": "/tmp/aux"},
  "engine": {"actor": "reactor"}
 }
